# languageLearn

./: .gitignore  README.md
CPP/: NVI_design.cpp  RAII_lock.cpp  assert.cpp  bit.cpp  byte_align_cpp.cpp  callback.cpp  ccsAddLengthHeader.cpp  char_str.cpp  classWithPointerMem.cpp  class_constructor.cpp  class_size.cpp  constMemFunc.cpp  container.cpp  default_keyword.cpp  event_line_asyn.cpp  for_each.cpp  fprintf.cpp  friend.cpp  func_pointer.cpp  getenv.cpp  initializer_list.cpp  inline_assert.cpp  lambda.cpp  list.cpp  math_log.cpp  move.cpp  multiThread.cpp  multiset.cpp  opOverload.cpp  pair.cpp  passByRef.cpp  print_format.cpp  pure_virtual_impl.cpp  queue.cpp  reference.cpp  return_ref.cpp  return_struct.cpp  saveIntInChar.cpp  search.cpp  signal.cpp  (+21 more)
CPP/C/: byte_align.c  cal_array_len.c  malloc.c
CPP/Eigen/: MatrixArray.cpp  block.cpp  leftcols.cpp  rotation_matrix.cpp  select.cpp  topRows  topRows.cpp
CPP/STLalgorithm/: lower_upper_bound  lower_upper_bound.cpp
CPP/boost/: README.md
CPP/boost/program_options/: CMakeLists.txt  program_options_cmdline.cpp  program_options_demo.cpp
CPP/smart_ptr/: README.md  (+2 more)
DSandA/: README.md  quicksort.cpp  sumOfLeftLeaves.cpp
GO/: README.md  basic_grammar.go  hello.go
JS/: exit.js  export.js  process.js  simple_httpServer.js
OO/: Notes.md  singleton.cpp
PYTHON/: GD_numpy.ipynb  action.py  classmethod.py  cluster.ipynb  decorator.py  global.py  leastsq.ipynb  maohaomaohao.py  mean_shift_cluster_copy.ipynb  nprandom.ipynb  pyqttest.py  randommm.py  randrange.py  shorter_code.py  tqdmTest.py  yield.py
(+95 files in other folders)
